package inveox.srm.domain.model.enums;

public enum ContainerStatus {
    NOT_SCANNED,
    IN_PROCESS,
    SCANNED_NO_ISSUES,
    SCANNED_BROKEN,
    SCANNED_EMPTY,
    SCANNED_COUNT_DIFF,
}